--- a/views/services/index.ejs
+++ b/views/services/index.ejs
@@ -66,7 +66,7 @@
                                                         <tr>
                                                             <td>
                                                                 <a class="btn-link"
-                                                                    href="/service/<%- service?.id%>?carID=<%- service?.car?.id%>">
+                                                                    href="/service/<%- service?._id%>?carID=<%- service?.car?.id%>">
 
                                                                     <%- service?.id%>
                                                                 </a>
