--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -1,6 +1,6 @@
 <nav class="sidebar sidebar-offcanvas" id="sidebar">
     <ul class="nav">
-        <% if([roles.ADMIN, roles.CUSTOMER].includes(user.role)) { %>
+        <% if([roles.ADMIN, roles.MANAGER, roles.CUSTOMER].includes(user.role)) { %>
 
         <li class="nav-item">
             <a class="nav-link" href="/account">
@@ -8,6 +8,9 @@
                 <span class="menu-title">Home</span>
             </a>
         </li>
+        <% } %>
+        <% if([roles.ADMIN, roles.CUSTOMER].includes(user.role)) { %>
+
         <li class="nav-item">
             <a class="nav-link" href="/cars">
                 <i class="fas fa-car menu-icon"></i>
@@ -63,6 +66,9 @@
                 <span class="menu-title">History</span>
             </a>
         </li>
+
+        <% } %>
+        <% if([roles.ADMIN].includes(user.role)) { %>
         <li class="nav-item">
             <a class="nav-link" data-bs-toggle="collapse" href="#ui-template" aria-expanded="false"
                 aria-controls="ui-template">
@@ -71,8 +77,6 @@
                 <i class="menu-arrow"></i>
             </a>
         </li>
-        <% } %>
-        <% if([roles.ADMIN].includes(user.role)) { %>
         <div class="collapse" id="ui-template">
             <li class="nav-item">
                 <a class="nav-link" data-bs-toggle="collapse" href="#ui-basic" aria-expanded="false"
