Bug fixes on view actions of cars.

--- a/views/user/view.ejs
+++ b/views/user/view.ejs
@@ -149,7 +149,7 @@
                                                     <tbody>
                                                         <% if(cars) { %>
                                                         <% for(car of cars) { %>
-                                                        <% let enableActions = (user.role === roles.ADMIN || car.services.length < 1) %>
+                                                        <% let enableActions = (user.role === roles.ADMIN || car?.services?.length < 1) %>
 
                                                         <tr>
                                                             <td>
