--- a/views/dashboards/mainDashboard.ejs
+++ b/views/dashboards/mainDashboard.ejs
@@ -37,7 +37,7 @@
                 <div class="content-wrapper">
                     <div class="row h-100">
                         <div class="col-sm-12">
-                            <div class="home-tab h-100">
+                            <div class="home-tab">
                                 <div class="d-sm-flex align-items-center justify-content-between border-bottom">
                                     <ul class="nav nav-tabs" role="tablist">
                                         <li class="nav-item">
@@ -60,8 +60,18 @@
                                         </li>
                                         <% } %>
                                     </ul>
+                                    <div>
+                                        <div class="btn-wrapper">
+                                            <a href="#" class="btn btn-otline-dark align-items-center"><i
+                                                    class="icon-share"></i> Share</a>
+                                            <a href="#" class="btn btn-otline-dark"><i class="icon-printer"></i>
+                                                Print</a>
+                                            <a href="#" class="btn btn-primary text-white me-0"><i
+                                                    class="icon-download"></i> Export</a>
+                                        </div>
+                                    </div>
                                 </div>
-                                <div class="tab-content tab-content-basic h-100">
+                                <div class="tab-content tab-content-basic vh-100">
                                     <!-- <div class="form-control-group">
                                         <button class="btn btn-primary" id="refresh-button">
                                             <i class="fa-solid fa-arrows-rotate"></i>
@@ -71,7 +81,9 @@
                                             placeholder="mm/dd/yyyy" class="form-control mb-3" required autofocus />
                                     </div> -->
 
-                                    <div class="tab-pane show active h-100" id="dashboard" role="tabpanel">
+                                    <div class="tab-pane show active" role="tabpanel">
+                                        <div class="vh-100" id="dashboard"></div>
+                                        <br>
                                         <!-- <iframe
                                             style="width: 100%; height: 100%; background: #F1F5F4;border: none;border-radius: 2px;box-shadow: 0 2px 10px 0 rgba(70, 76, 79, .2);"
                                             src="https://charts.mongodb.com/charts-autocare-development-kzztx/embed/dashboards?id=62280248-a354-4826-891f-fa5a1c9302ea&theme=light&autoRefresh=true&maxDataAge=60&showTitleAndDesc=false&scalingWidth=scale&scalingHeight=fixed&attribution=false
@@ -86,134 +98,144 @@
                                 </div>
 
                                 <!-- content-wrapper ends -->
-                                <!-- partial:partials/_footer.html -->
-                                <%- include('../partials/footer.ejs'); %>
-                                <!-- partial -->
+
                             </div>
                             <!-- main-panel ends -->
                         </div>
                         <!-- page-body-wrapper ends -->
                     </div>
                     <!-- container-scroller -->
+                </div>
+                <!-- partial:partials/_footer.html -->
+                <%- include('../partials/footer.ejs'); %>
+            </div>
 
-                    <!-- plugins:js -->
-                    <script src="./vendors/js/vendor.bundle.base.js"></script>
-                    <!-- endinject -->
-                    <!-- Plugin js for this page -->
-                    <script src="./vendors/chart.js/Chart.min.js"></script>
-                    <script src="./vendors/bootstrap-datepicker/bootstrap-datepicker.min.js"></script>
-                    <script src="./vendors/progressbar.js/progressbar.min.js"></script>
-                    <script type="text/javascript"
-                        src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
+        </div>
 
-                    <!-- End plugin js for this page -->
-                    <!-- inject:js -->
-                    <script src="./js/off-canvas.js"></script>
-                    <script src="./js/hoverable-collapse.js"></script>
-                    <script src="./js/template.js"></script>
-                    <!-- <script src="./js/settings.js"></script> -->
-                    <script src="./js/todolist.js"></script>
-                    <!-- endinject -->
-                    <!-- Custom js for this page-->
-                    <script type="text/javascript" src="https://js.stripe.com/v3/"></script>
-                    <script type="text/javascript" src="../js/account.js"></script>
-                    <script src="./js/jquery.cookie.js" type="text/javascript"></script>
-                    <script src="./js/dashboard.js"></script>
-                    <script src="./js/Chart.roundedBarCharts.js"></script>
-                    <!-- End custom js for this page-->
-                    <!-- <script src="../js/helper-functions.js"></script> -->
-                    <!-- Datatables -->
-                    <!-- Alerts Code -->
-                    <%- include('../partials/alerts.ejs', {message, alertType}); %>
-                    <%- include('../partials/dataTable.ejs', {tableID : '#membersTable'}); %>
+    </div>
 
-                    <script src="./js/Chart.roundedBarCharts.js"></script>
+    <!-- plugins:js -->
+    <script src="./vendors/js/vendor.bundle.base.js"></script>
+    <!-- endinject -->
+    <!-- Plugin js for this page -->
+    <script src="./vendors/chart.js/Chart.min.js"></script>
+    <script src="./vendors/bootstrap-datepicker/bootstrap-datepicker.min.js"></script>
+    <script src="./vendors/progressbar.js/progressbar.min.js"></script>
+    <script type="text/javascript"
+        src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
 
-                    <script src="https://unpkg.com/@mongodb-js/charts-embed-dom"></script>
+    <!-- End plugin js for this page -->
+    <!-- inject:js -->
+    <script src="./js/off-canvas.js"></script>
+    <script src="./js/hoverable-collapse.js"></script>
+    <script src="./js/template.js"></script>
+    <!-- <script src="./js/settings.js"></script> -->
+    <script src="./js/todolist.js"></script>
+    <!-- endinject -->
+    <!-- Custom js for this page-->
+    <script type="text/javascript" src="https://js.stripe.com/v3/"></script>
+    <script type="text/javascript" src="../js/account.js"></script>
+    <script src="./js/jquery.cookie.js" type="text/javascript"></script>
+    <script src="./js/dashboard.js"></script>
+    <script src="./js/Chart.roundedBarCharts.js"></script>
+    <!-- End custom js for this page-->
+    <!-- <script src="../js/helper-functions.js"></script> -->
+    <!-- Datatables -->
+    <!-- Alerts Code -->
+    <%- include('../partials/alerts.ejs', {message, alertType}); %>
+    <%- include('../partials/dataTable.ejs', {tableID : '#membersTable'}); %>
 
-                    <script>
-                        const ChartsEmbedSDK = window.ChartsEmbedSDK;
+    <script src="./js/Chart.roundedBarCharts.js"></script>
 
-                        const sdk = new ChartsEmbedSDK({
-                            baseUrl: 'https://charts.mongodb.com/charts-autocare-development-kzztx',
-                            autoRefresh: true,
-                            maxDataAge: 60,
-                            widthMode: 'scale',
-                            heightMode: 'fixed',
-                            showAttribution: false
-                        });
-                        // const chart = sdk.createChart({ ... });
+    <script src="https://unpkg.com/@mongodb-js/charts-embed-dom"></script>
 
-                        // embed a dashboard
-                        const dashboard = sdk.createDashboard({
-                            dashboardId: '62280248-a354-4826-891f-fa5a1c9302ea',
+    <script>
+        const ChartsEmbedSDK = window.ChartsEmbedSDK;
 
-                        });
+        const sdk = new ChartsEmbedSDK({
+            baseUrl: 'https://charts.mongodb.com/charts-autocare-development-kzztx',
+            autoRefresh: true,
+            maxDataAge: 60,
+            widthMode: 'scale',
+            heightMode: 'fixed',
+            showAttribution: false
+        });
+        // const chart = sdk.createChart({ ... });
 
-                        function addEventListeners() {
-                            /* Refresh button */
-                            // document
-                            //     .getElementById("refresh-button")
-                            //     .addEventListener("click", async function () {
-                            //         console.log('refresh')
-                            //         await dashboard.refresh();
-                            //     });
+        // embed a dashboard
+        const dashboard = sdk.createDashboard({
+            dashboardId: '62280248-a354-4826-891f-fa5a1c9302ea',
 
-                            /* Theme toggle */
-                            // document
-                            //     .getElementById("theme")
-                            //     .addEventListener("change", async function () {
-                            //         await dashboard.setTheme(this.checked ? "dark" : "light");
+        });
 
-                            //         const currentTheme = await dashboard.getTheme();
-                            //         document.getElementById("currentTheme").innerText =
-                            //             currentTheme === "light" ? "dark" : "light";
-                            //     });
+        function addEventListeners() {
+            /* Refresh button */
+            // document
+            //     .getElementById("refresh-button")
+            //     .addEventListener("click", async function () {
+            //         console.log('refresh')
+            //         await dashboard.refresh();
+            //     });
 
-                            /* Max Data Age select */
-                            // document
-                            //     .getElementById("fromDate")
-                            //     .addEventListener("change", async (e) => {
-                            //         const dateValue = e.target.value;
-                            //         // const defaultMaxDataAge = 3600;
-                            //         var charts = await dashboard.getAllCharts();
-                            //         console.log("length " + charts.length)
-                            //         for (chart of charts) {
-                            //             chart.getFilter()
-                            //         }
-                            //     });
+            /* Theme toggle */
+            // document
+            //     .getElementById("theme")
+            //     .addEventListener("change", async function () {
+            //         await dashboard.setTheme(this.checked ? "dark" : "light");
 
-                            // /* Height Mode select */
-                            // document
-                            //     .getElementById("height-mode")
-                            //     .addEventListener("change", async (e) => {
-                            //         const heightMode = e.target.value;
-                            //         await dashboard.setHeightMode(heightMode);
-                            //     });
+            //         const currentTheme = await dashboard.getTheme();
+            //         document.getElementById("currentTheme").innerText =
+            //             currentTheme === "light" ? "dark" : "light";
+            //     });
 
-                            // /* Width Mode select */
-                            // document
-                            //     .getElementById("width-mode")
-                            //     .addEventListener("change", async (e) => {
-                            //         const widthMode = e.target.value;
-                            //         await dashboard.setWidthMode(widthMode);
-                            //     });
+            /* Max Data Age select */
+            // document
+            //     .getElementById("fromDate")
+            //     .addEventListener("change", async (e) => {
+            //         const dateValue = e.target.value;
+            //         // const defaultMaxDataAge = 3600;
+            //         var charts = await dashboard.getAllCharts();
+            //         console.log("length " + charts.length)
+            //         for (chart of charts) {
+            //             chart.getFilter()
+            //         }
+            //     });
 
-                            // /* Charts Background select */
-                            // document
-                            //     .getElementById("charts-background")
-                            //     .addEventListener("change", async (e) => {
-                            //         const chartsBackground = e.target.value;
-                            //         await dashboard.setChartsBackground(chartsBackground);
-                            //     });
-                        }
+            // /* Height Mode select */
+            // document
+            //     .getElementById("height-mode")
+            //     .addEventListener("change", async (e) => {
+            //         const heightMode = e.target.value;
+            //         await dashboard.setHeightMode(heightMode);
+            //     });
 
-                        async function renderDashboard() {
-                            await dashboard.render(document.getElementById("dashboard"));
-                            addEventListeners();
-                        }
+            // /* Width Mode select */
+            // document
+            //     .getElementById("width-mode")
+            //     .addEventListener("change", async (e) => {
+            //         const widthMode = e.target.value;
+            //         await dashboard.setWidthMode(widthMode);
+            //     });
 
-                        renderDashboard().catch((e) => window.alert(e.message));
+            // /* Charts Background select */
+            // document
+            //     .getElementById("charts-background")
+            //     .addEventListener("change", async (e) => {
+            //         const chartsBackground = e.target.value;
+            //         await dashboard.setChartsBackground(chartsBackground);
+            //     });
+        }
+
+        async function renderDashboard() {
+            await dashboard.render(document.getElementById("dashboard"));
+            addEventListeners();
+
+            // $("#dashboard div").css({ position: 'inherit' });
+
+            // $('#dashboard div').position('inherit')
+        }
+
+        renderDashboard().catch((e) => window.alert(e.message));
 
 
 
@@ -221,7 +243,7 @@
 
 
                         // console.log(JSON.stringify(dashoardCharts))
-                    </script>
+    </script>
 </body>
 
 </html>
