--- a/views/dashboards/mainDashboard.ejs
+++ b/views/dashboards/mainDashboard.ejs
@@ -62,10 +62,10 @@
                                     </ul>
                                     <div>
                                         <div class="btn-wrapper">
-                                            <a href="#" class="btn btn-otline-dark align-items-center"><i
+                                            <!-- <a href="#" class="btn btn-otline-dark align-items-center"><i
                                                     class="icon-share"></i> Share</a>
                                             <a href="#" class="btn btn-otline-dark"><i class="icon-printer"></i>
-                                                Print</a>
+                                                Print</a> -->
                                             <a href="#" class="btn btn-primary text-white me-0"><i
                                                     class="icon-download"></i> Export</a>
                                         </div>
