--- a/views/dashboards/mainDashboard.ejs
+++ b/views/dashboards/mainDashboard.ejs
@@ -71,7 +71,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="tab-content tab-content-basic vh-100">
+                                <div class="tab-content tab-content-basic">
                                     <!-- <div class="form-control-group">
                                         <button class="btn btn-primary" id="refresh-button">
                                             <i class="fa-solid fa-arrows-rotate"></i>
@@ -81,9 +81,7 @@
                                             placeholder="mm/dd/yyyy" class="form-control mb-3" required autofocus />
                                     </div> -->
 
-                                    <div class="tab-pane show active" role="tabpanel">
-                                        <div class="vh-100" id="dashboard"></div>
-                                        <br>
+                                    <div class="tab-pane show active vh-100" id="dashboard" role="tabpanel">
                                         <!-- <iframe
                                             style="width: 100%; height: 100%; background: #F1F5F4;border: none;border-radius: 2px;box-shadow: 0 2px 10px 0 rgba(70, 76, 79, .2);"
                                             src="https://charts.mongodb.com/charts-autocare-development-kzztx/embed/dashboards?id=62280248-a354-4826-891f-fa5a1c9302ea&theme=light&autoRefresh=true&maxDataAge=60&showTitleAndDesc=false&scalingWidth=scale&scalingHeight=fixed&attribution=false
