--- a/public/css/vertical-layout-light/style.css
+++ b/public/css/vertical-layout-light/style.css
@@ -30711,7 +30711,8 @@ div.tagsinput span.tag a {
 
 .content-wrapper {
     background: #F4F5F7;
-    padding: 1.5rem 2.187rem 1.5rem 1.5rem;
+    /* padding: 1.5rem 2.187rem 1.5rem 1.5rem; */
+    padding: 1rem;
     width: 100%;
     -webkit-flex-grow: 1;
     flex-grow: 1;
