--- a/views/dashboards/mainDashboard.ejs
+++ b/views/dashboards/mainDashboard.ejs
@@ -83,9 +83,12 @@
 
                                     <div class="tab-pane show active vh-100" id="dashboard" role="tabpanel">
                                         <!-- <iframe
-                                            style="width: 100%; height: 100%; background: #F1F5F4;border: none;border-radius: 2px;box-shadow: 0 2px 10px 0 rgba(70, 76, 79, .2);"
-                                            src="https://charts.mongodb.com/charts-autocare-development-kzztx/embed/dashboards?id=62280248-a354-4826-891f-fa5a1c9302ea&theme=light&autoRefresh=true&maxDataAge=60&showTitleAndDesc=false&scalingWidth=scale&scalingHeight=fixed&attribution=false
-                                        "></iframe> -->
+                                            style="background: #F1F5F4;border: none;border-radius: 2px;box-shadow: 0 2px 10px 0 rgba(70, 76, 79, .2);"
+                                            src="https://charts.mongodb.com/charts-autocare-development-kzztx/embed/dashboards?id=62280248-a354-4826-891f-fa5a1c9302ea&theme=light&autoRefresh=true&maxDataAge=3600&showTitleAndDesc=false&scalingWidth=fixed&scalingHeight=fixed"></iframe> -->
+                                        <iframe class="vh-100 w-100"
+                                            style="background: #F1F5F4;border: none;border-radius: 2px;box-shadow: 0 2px 10px 0 rgba(70, 76, 79, .2);"
+                                            src="https://charts.mongodb.com/charts-autocare-development-kzztx/public/dashboards/62280248-a354-4826-891f-fa5a1c9302ea?theme=light&autoRefresh=true&maxDataAge=3600&showTitleAndDesc=false&scalingWidth=fixed&scalingHeight=fixed"></iframe>
+                                       
                                     </div>
                                     <% if(user?.subscriptions) { %>
                                     <div class="tab-pane" id="plan" role="tabpanel" aria-labelledby="plan">
@@ -135,7 +138,7 @@
     <script type="text/javascript" src="../js/account.js"></script>
     <script src="./js/jquery.cookie.js" type="text/javascript"></script>
     <script src="./js/dashboard.js"></script>
-    <script src="./js/Chart.roundedBarCharts.js"></script>
+    <!-- <script src="./js/Chart.roundedBarCharts.js"></script> -->
     <!-- End custom js for this page-->
     <!-- <script src="../js/helper-functions.js"></script> -->
     <!-- Datatables -->
@@ -143,31 +146,31 @@
     <%- include('../partials/alerts.ejs', {message, alertType}); %>
     <%- include('../partials/dataTable.ejs', {tableID : '#membersTable'}); %>
 
-    <script src="./js/Chart.roundedBarCharts.js"></script>
+    <!-- <script src="./js/Chart.roundedBarCharts.js"></script> -->
 
-    <script src="https://unpkg.com/@mongodb-js/charts-embed-dom"></script>
+    <!-- <script src="https://unpkg.com/@mongodb-js/charts-embed-dom"></script> -->
 
     <script>
-        const ChartsEmbedSDK = window.ChartsEmbedSDK;
+        // const ChartsEmbedSDK = window.ChartsEmbedSDK;
 
-        const sdk = new ChartsEmbedSDK({
-            baseUrl: 'https://charts.mongodb.com/charts-autocare-development-kzztx',
-            autoRefresh: true,
-            maxDataAge: 60,
-            widthMode: 'scale',
-            heightMode: 'fixed',
-            showAttribution: false
-        });
+        // const sdk = new ChartsEmbedSDK({
+        //     baseUrl: 'https://charts.mongodb.com/charts-autocare-development-kzztx',
+        //     autoRefresh: true,
+        //     maxDataAge: 60,
+        //     widthMode: 'scale',
+        //     heightMode: 'fixed',
+        //     showAttribution: false
+        // });
         // const chart = sdk.createChart({ ... });
 
         // embed a dashboard
-        const dashboard = sdk.createDashboard({
-            dashboardId: '62280248-a354-4826-891f-fa5a1c9302ea',
+        // const dashboard = sdk.createDashboard({
+        //     dashboardId: '62280248-a354-4826-891f-fa5a1c9302ea',
 
-        });
+        // });
 
-        function addEventListeners() {
-            /* Refresh button */
+        // function addEventListeners() {
+        /* Refresh button */
             // document
             //     .getElementById("refresh-button")
             //     .addEventListener("click", async function () {
@@ -175,7 +178,7 @@
             //         await dashboard.refresh();
             //     });
 
-            /* Theme toggle */
+        /* Theme toggle */
             // document
             //     .getElementById("theme")
             //     .addEventListener("change", async function () {
@@ -186,7 +189,7 @@
             //             currentTheme === "light" ? "dark" : "light";
             //     });
 
-            /* Max Data Age select */
+        /* Max Data Age select */
             // document
             //     .getElementById("fromDate")
             //     .addEventListener("change", async (e) => {
@@ -222,25 +225,21 @@
             //         const chartsBackground = e.target.value;
             //         await dashboard.setChartsBackground(chartsBackground);
             //     });
-        }
+        // }
 
-        async function renderDashboard() {
-            await dashboard.render(document.getElementById("dashboard"));
-            addEventListeners();
+        // async function renderDashboard() {
+            // await dashboard.render(document.getElementById("dashboard"));
+            // addEventListeners();
 
             // $("#dashboard div").css({ position: 'inherit' });
 
             // $('#dashboard div').position('inherit')
-        }
+        // }
 
-        renderDashboard().catch((e) => window.alert(e.message));
+        // renderDashboard().catch((e) => window.alert(e.message));
 
+        // console.log(JSON.stringify(dashoardCharts))
 
-
-
-
-
-                        // console.log(JSON.stringify(dashoardCharts))
     </script>
 </body>
 
