--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -70,6 +70,12 @@
         <% } %>
         <% if([roles.ADMIN].includes(user.role)) { %>
         <li class="nav-item">
+            <a class="nav-link" href="/reports">
+                <i class="fa-solid fa-square-poll-vertical menu-icon"></i>
+                <span class="menu-title">Reports</span>
+            </a>
+        </li>
+        <li class="nav-item">
             <a class="nav-link" data-bs-toggle="collapse" href="#ui-template" aria-expanded="false"
                 aria-controls="ui-template">
                 <i class="menu-icon mdi mdi-floor-plan"></i>
