--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -9,12 +9,39 @@
             </a>
         </li>
         <% } %>
-        <% if([roles.ADMIN, roles.CUSTOMER].includes(user.role)) { %>
+
+        <% if([roles.ADMIN, roles.MANAGER].includes(user.role)) { %>
 
         <li class="nav-item">
             <a class="nav-link" href="/cars">
                 <i class="fas fa-car menu-icon"></i>
-                <span class="menu-title">Manage My Cars</span>
+                <span class="menu-title">
+                    All Cars
+                </span>
+            </a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/services">
+                <i class="fa-solid fa-calendar menu-icon"></i>
+                <span class="menu-title">All Services</span>
+            </a>
+        </li>
+
+        <li class="nav-item">
+            <a class="nav-link" href="/charges">
+                <i class="fa-solid fa-file-invoice menu-icon"></i>
+                <span class="menu-title">Billing History</span>
+            </a>
+        </li>
+        <% } %>
+
+        <% if([roles.CUSTOMER].includes(user.role)) { %>
+        <li class="nav-item">
+            <a class="nav-link" href="/cars">
+                <i class="fas fa-car menu-icon"></i>
+                <span class="menu-title">
+                    Manage My Cars
+                </span>
             </a>
         </li>
         <li class="nav-item">
@@ -50,7 +77,9 @@
         <% if([roles.ADMIN, roles.MANAGER].includes(user.role)) { %>
         <li class="nav-item">
             <a class="nav-link" href="/users">
-                <i class="fas fa-users menu-icon"></i>
+                <!-- <i class="fas fa-solid fa-users-between-lines menu-icon"></i> -->
+                <i class="fa-solid fa-user-gear menu-icon"></i>
+                <!-- <i class="fas fa-users menu-icon"></i> -->
                 <span class="menu-title">Users</span>
             </a>
         </li>
