Change Create account btn size. Add header with logo to home page. Change font size of product names. Change Total to Sub Total on Checkout.

--- a/views/auth/createSubs.ejs
+++ b/views/auth/createSubs.ejs
@@ -100,8 +100,8 @@
                                             <tfoot>
                                                 <tr>
                                                     <th></th>
-                                                    <th colspan="1" style="text-align:right">Total:</th>
                                                     <th></th>
+                                                    <th colspan="1" style="text-align:right">Sub Total:</th>
                                                     <th></th>
                                                 </tr>
                                             </tfoot>
