--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -68,16 +68,22 @@
                                         class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn w-100"
                                         type="submit"><%= lingua.login%></button>
                                 </div>
+
+                                <div class="mt-3">
+                                    <a href="/create-account"
+                                        class="btn btn-block btn-secondary btn-lg font-weight-medium auth-form-btn w-100"
+                                        type="submit"> <%= lingua.create %></a>
+                                </div>
                                 <div class="my-2 d-flex justify-content-between align-items-center">
-                                    <!-- <a href="#" class="auth-link text-black">Forgot password?</a> -->
+                                    <a href="/forgot-password" class="auth-link text-black">Forgot password?</a>
                                 </div>
 
-                                <div class="text-center mt-4 fw-light">
-                                    <%= lingua.dontHaveAccount %>
+                                <!-- <div class="text-center mt-4 fw-light">
+                                    <%# lingua.dontHaveAccount %>
                                     <a href="/create-account" class="text-primary">
-                                        <%= lingua.create %>
+                                        <%# lingua.create %>
                                     </a>
-                                </div>
+                                </div> -->
                             </form>
                             <br>
                             <div class="dropdown">
