Move useService to serviceController.

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -165,7 +165,7 @@
                 </div>
             </li>
             <li class="nav-item d-none d-lg-block">
-                <a class="nav-link" href="/home" aria-expanded="false" title="Add Membership">
+                <a class="nav-link" href="/create-subscriptions" aria-expanded="false" title="Add Membership">
                     <i class="fa-solid fa-cart-plus text-primary"></i>
                     <!-- <i class="fa-solid fa-list"></i> -->
                 </a>
