--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -71,7 +71,7 @@
 
                                 <div class="mt-3">
                                     <a href="/create-account"
-                                        class="btn btn-block btn-secondary btn-lg font-weight-medium auth-form-btn w-100"
+                                        class="btn btn-block btn-success btn-lg font-weight-medium auth-form-btn w-100 tex-white"
                                         type="submit"> <%= lingua.create %></a>
                                 </div>
                                 <div class="my-2 d-flex justify-content-between align-items-center">
