--- a/views/dashboards/mainDashboard.ejs
+++ b/views/dashboards/mainDashboard.ejs
@@ -60,16 +60,16 @@
                                         </li>
                                         <% } %>
                                     </ul>
-                                    <div>
+                                    <!-- <div>
                                         <div class="btn-wrapper">
-                                            <!-- <a href="#" class="btn btn-otline-dark align-items-center"><i
+                                             <a href="#" class="btn btn-otline-dark align-items-center"><i
                                                     class="icon-share"></i> Share</a>
                                             <a href="#" class="btn btn-otline-dark"><i class="icon-printer"></i>
-                                                Print</a> -->
+                                                Print</a>
                                             <a href="#" class="btn btn-primary text-white me-0"><i
                                                     class="icon-download"></i> Export</a>
                                         </div>
-                                    </div>
+                                    </div> -->
                                 </div>
                                 <div class="tab-content tab-content-basic">
                                     <!-- <div class="form-control-group">
@@ -88,7 +88,7 @@
                                         <iframe class="vh-100 w-100"
                                             style="background: #F1F5F4;border: none;border-radius: 2px;box-shadow: 0 2px 10px 0 rgba(70, 76, 79, .2);"
                                             src="https://charts.mongodb.com/charts-autocare-development-kzztx/public/dashboards/62280248-a354-4826-891f-fa5a1c9302ea?theme=light&autoRefresh=true&maxDataAge=3600&showTitleAndDesc=false&scalingWidth=fixed&scalingHeight=fixed"></iframe>
-                                       
+
                                     </div>
                                     <% if(user?.subscriptions) { %>
                                     <div class="tab-pane" id="plan" role="tabpanel" aria-labelledby="plan">
