--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -26,10 +26,16 @@
                 <span class="menu-title">All Services</span>
             </a>
         </li>
-
+        <li class="nav-item">
+            <a class="nav-link" href="/invoices">
+                <i class="fa-solid fa-file-invoice menu-icon"></i>
+                <span class="menu-title">Invoices</span>
+            </a>
+        </li>
         <li class="nav-item">
             <a class="nav-link" href="/charges">
-                <i class="fa-solid fa-file-invoice menu-icon"></i>
+                <!-- <i class="fa-solid fa-file-invoice menu-icon"></i> -->
+                <i class="fa-solid fa-receipt menu-icon"></i>
                 <span class="menu-title">Billing History</span>
             </a>
         </li>
@@ -51,8 +57,15 @@
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="/charges">
+            <a class="nav-link" href="/invoices">
                 <i class="fa-solid fa-file-invoice menu-icon"></i>
+                <span class="menu-title">My Invoices</span>
+            </a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/charges">
+                <i class="fa-solid fa-receipt menu-icon"></i>
+                <!-- <i class="fa-solid fa-file-invoice menu-icon"></i> -->
                 <span class="menu-title">Billing History</span>
             </a>
         </li>
