Add product to service for easy filters on reports.

--- a/views/ajaxSnippets/useServiceResult.ejs
+++ b/views/ajaxSnippets/useServiceResult.ejs
@@ -19,6 +19,9 @@
                 <h4>Car: <%= car?.brand%>, <%= car?.model%> (<%= car?.plate%>)</h4>
             </li>
             <li>
+                <h4>Product: <%= service?.product%></h4>
+            </li>
+            <li>
                 <h4>
                     Location : <%= service?.location?.name%>
                 </h4>
