Implement forgot password functionallity. Use nodemailer, handlebars. Create Token model.

--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -75,7 +75,7 @@
                                         type="submit"> <%= lingua.create %></a>
                                 </div>
                                 <div class="my-2 d-flex justify-content-between align-items-center">
-                                    <a href="/forgot-password" class="auth-link text-black">Forgot password?</a>
+                                    <a href="/resetPasswordRequest" class="auth-link text-black">Forgot password?</a>
                                 </div>
 
                                 <!-- <div class="text-center mt-4 fw-light">
